# miniob

./: observer.log.20250615
etc/: observer.ini
miniob/db/sys/: date_table.table  dblwr.db  t.data  t.table
src/observer/: CMakeLists.txt
src/observer/common/: value.cpp  value.h
src/observer/common/type/: data_type.cpp  date_type.cpp  date_type.h
src/observer/sql/executor/: command_executor.cpp  drop_table_executor.cpp  drop_table_executor.h
src/observer/sql/operator/: logical_operator.h  physical_operator.h  update_logical_operator.h  update_physical_operator.cpp  update_physical_operator.h
src/observer/sql/optimizer/: logical_plan_generator.cpp  logical_plan_generator.h  physical_plan_generator.cpp  physical_plan_generator.h
src/observer/sql/parser/: lex_sql.l  observer.log.20250615  parse_defs.h  parse_stage.cpp  yacc_sql.y
src/observer/sql/stmt/: drop_table_stmt.cpp  drop_table_stmt.h  stmt.cpp  update_stmt.cpp  update_stmt.h
src/observer/storage/db/: db.cpp  db.h
src/observer/storage/record/: record_manager.cpp  record_manager.h
src/observer/storage/table/: table.cpp  table.h
src/observer/storage/trx/: mvcc_trx.h  trx.h  vacuous_trx.h
